RQ3/Commits/260___b9bc7b8b1e9e815b231c1ca0b566ee723f480987.txt
['b9bc7b8b1e9e815b231c1ca0b566ee723f480987', '717.txt', 'FixFormatSpecifier']
commit b9bc7b8b1e9e815b231c1ca0b566ee723f480987
Author: Raul E Rangel <rrangel@chromium.org>
Date:   Tue Aug 27 11:36:19 2019 -0600

    lkdtm/bugs: fix build error in lkdtm_EXHAUST_STACK
    
    lkdtm/bugs.c:94:2: error: format '%d' expects argument of type 'int', but argument 2 has type 'long unsigned int' [-Werror=format=]
      pr_info("Calling function with %d frame size to depth %d ...\n",
      ^
    THREAD_SIZE is defined as a unsigned long, cast CONFIG_FRAME_WARN to
    unsigned long as well.
    
    Fixes: 24cccab42c419 ("lkdtm/bugs: Adjust recursion test to avoid elision")
    Cc: stable <stable@vger.kernel.org>
    Signed-off-by: Raul E Rangel <rrangel@chromium.org>
    Acked-by: Kees Cook <keescook@chromium.org>
    Link: https://lore.kernel.org/r/20190827173619.170065-1-rrangel@chromium.org
    Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>

diff --git a/drivers/misc/lkdtm/bugs.c b/drivers/misc/lkdtm/bugs.c
index 1606658b9b7e..24245ccdba72 100644
--- a/drivers/misc/lkdtm/bugs.c
+++ b/drivers/misc/lkdtm/bugs.c
@@ -22,7 +22,7 @@ struct lkdtm_list {
  * recurse past the end of THREAD_SIZE by default.
  */
 #if defined(CONFIG_FRAME_WARN) && (CONFIG_FRAME_WARN > 0)
-#define REC_STACK_SIZE (CONFIG_FRAME_WARN / 2)
+#define REC_STACK_SIZE (_AC(CONFIG_FRAME_WARN, UL) / 2)
 #else
 #define REC_STACK_SIZE (THREAD_SIZE / 8)
 #endif
@@ -91,7 +91,7 @@ void lkdtm_LOOP(void)
 
 void lkdtm_EXHAUST_STACK(void)
 {
-	pr_info("Calling function with %d frame size to depth %d ...\n",
+	pr_info("Calling function with %lu frame size to depth %d ...\n",
 		REC_STACK_SIZE, recur_count);
 	recursive_loop(recur_count);
 	pr_info("FAIL: survived without exhausting stack?!\n");
